add Daos, integration tests